Integration of calculator program into Suko calculator GUI is done.